# shared-foundation-cpp

./: .gitignore  CMakeLists.txt  Package.swift
src/: foundation.hpp
src/exceptions/: exception.hpp
src/memory/: allocator.cpp  object.cpp  object.hpp  strong.hpp  weak.hpp
src/parallelism/: mutex.cpp  mutex.hpp  parallelism.hpp  thread.cpp  thread.hpp
src/platform/: thread.cpp  thread.hpp
src/serialization/: json.cpp
src/system/: environment.cpp
src/tools/: macros.hpp  math.hpp  queue.hpp  tools.hpp
src/types/: array.hpp  comparable.hpp  data.hpp  date.cpp  date.hpp  dictionary.hpp  duration.cpp  equatable.hpp  hashable.cpp  hashable.hpp  number.hpp  pair.hpp  string.cpp  string.hpp  types.hpp  url.cpp  uuid.cpp
